--- a/django_project/hub/templates/hub/modules/addForm.html
+++ b/django_project/hub/templates/hub/modules/addForm.html
@@ -13,13 +13,13 @@
 
 
                 {% if field.name == "stored" or field.name == "code"%}
-                <div id="QRButtonDivid_{{field.name}}">
-                <button id="QRButtonid_{{field.name}}" class="btn btn-primary" type="button" hx-get="./scanner/id_{{field.name}}/on" hx-trigger="click, refresh">QR</button>
+                <div id="QRButtonDiv{{field.auto_id}}">
+                <button id="QRButton{{field.auto_id}}" class="btn btn-primary" type="button" hx-get="./scanner/{{field.auto_id}}/on" hx-trigger="click, refresh">QR</button>
                 </div>
                 </div>
             </div>
 
-            <div id="scannerDivid_{{field.name}}">
+            <div id="scannerDiv{{field.auto_id}}">
             </div>
                 {% else %}
                 </div>
