--- a/django_project/hub/templates/hub/modules/results.html
+++ b/django_project/hub/templates/hub/modules/results.html
@@ -7,7 +7,7 @@
             </td>
 
             {% if type == "article" %}
-            <td>{{ r.name }}</td>
+            <td>{{ r.base.name }}</td>
 
             {% elif type == "location" %}
             <td>{{ r }}</td>
@@ -18,10 +18,6 @@
             {% elif type == "storage" %}
             <td>{{ r }}</td>
             
-            <td>
-              {{ r.parent }}
-            </td>
-
             {% elif type == "code" %}
             <td>{{ r.code }}</td>
             <td>{{ r.used }}</td>
